Add unit-test for SharedSampler handling of zero-thread processes.

BUG=683849, 673175

Review-Url: https://codereview.chromium.org/2657393003
Cr-Commit-Position: refs/heads/master@{#448166}

Former-commit-id: a9abedb1e941cc2512f65bb3f66d5446033682d3